Project

General

Profile

Actions

Bug #54081

closed

mon/MDSMonitor: sanity assert when inline data turned on in MDSMap from v16.2.4 -> v16.2.[567]

Added by Patrick Donnelly over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
High
Category:
-
Target version:
% Done:

100%

Source:
Community (user)
Tags:
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #54160: quincy: mon/MDSMonitor: sanity assert when inline data turned on in MDSMap from v16.2.4 -> v16.2.[567]ResolvedPatrick DonnellyActions
Copied to CephFS - Backport #54161: pacific: mon/MDSMonitor: sanity assert when inline data turned on in MDSMap from v16.2.4 -> v16.2.[567]ResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 44851
Actions #2

Updated by Venky Shankar over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #54160: quincy: mon/MDSMonitor: sanity assert when inline data turned on in MDSMap from v16.2.4 -> v16.2.[567] added
Actions #4

Updated by Backport Bot over 2 years ago

  • Copied to Backport #54161: pacific: mon/MDSMonitor: sanity assert when inline data turned on in MDSMap from v16.2.4 -> v16.2.[567] added
Actions #5

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #6

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (backport_processed)
Actions

Also available in: Atom PDF